--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,8 +40,14 @@ dependencies:
   firebase_storage: ^11.1.0
   firebase_core: ^2.9.0
   cloud_firestore: ^4.5.1
-  
+
   fluttertoast: ^8.2.1
+  persistent_bottom_nav_bar: ^5.0.2
+  image_picker: ^0.8.7+1
+  firebase_messaging: ^14.4.0
+  flutter_stripe: ^9.0.0+1
+  http: ^0.13.5
+  flutter_native_splash: ^2.2.19
 
 dev_dependencies:
   flutter_test:
